--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,5 @@ git = "https://github.com/radicle-dev/git2-rs.git"
 rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"
 
 [patch.crates-io.thrussh-encoding]
-git = "https://github.com/FintanH/thrussh.git"
+git = "https://github.com/erak/thrussh.git"
 branch = "generic-agent"
