--- a/node-lib/Cargo.toml
+++ b/node-lib/Cargo.toml
@@ -34,7 +34,7 @@ path    = "../rad-clib"
 version = "0.1.0"
 
 [dependencies.thrussh-agent]
-git       = "https://github.com/FintanH/thrussh"
+git       = "https://github.com/erak/thrussh"
 features  = [ "tokio-agent" ]
 branch    = "generic-agent"
 
