--- a/rad-clib/Cargo.toml
+++ b/rad-clib/Cargo.toml
@@ -30,6 +30,6 @@ version = "0.9.1"
 features = ["std"]
 
 [dependencies.thrussh-agent]
-git = "https://github.com/FintanH/thrussh"
+git = "https://github.com/erak/thrussh"
 branch = "generic-agent"
 features = [ "tokio-agent" ]
