--- a/rad-profile/Cargo.toml
+++ b/rad-profile/Cargo.toml
@@ -23,5 +23,5 @@ path = "../librad"
 path = "../rad-clib"
 
 [dependencies.thrussh-agent]
-git = "https://github.com/FintanH/thrussh"
+git = "https://github.com/erak/thrussh"
 branch = "generic-agent"
